[tool.poetry]
name = "prcs-ext-demo"
version = "0.1.0"
description = ""
authors = ["MS Chagar <mschagar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
streamlit = "^1.37.0"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
langchain-community = "^0.2.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
